hphp/hack/test/typecheck/lambda/lambda22.php.exp
File "lambda22.php", line 4, characters 10-10:
Invalid return type (Typing[4039])
File "lambda22.php", line 3, characters 17-33:
Number of arguments doesn't match
File "lambda22.php", line 4, characters 10-10:
Because of this definition
