hphp/hack/test/typecheck/lambda/lambda22.php
<?hh

function foo(): (function(): int) {
  return (...$args) ==> 4;
}
